# tamid-quant-nyu

./: ghost_flight_backtest_no_flightware.py  ghost_flight_backtest_with_flightware.py  ghost_flight_strategy_briefing.docx
backtests/: ghost_flight_backtest_no_flightware.py  ghost_flight_backtest_with_flightware.py  msgs_calendar_spread_backtest.py
branding/: TAQUANT SLIDES TEMPLATE.pptx
branding/TAMID_Quant_Logo_Assets/: README.txt
branding/TAMID_Quant_Logo_Assets_3/: README.txt
educational-resources/edu-slides/: Stochastic_Calculus.pptx
taquantgeo/: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  alembic.ini  pyproject.toml
taquantgeo/.build/: CHANGELOG.md  README.md  archived_candidates.md  candidate_phases.md  run.py  triage_report.md
taquantgeo/.build/handoffs/: 00_handoff.md  01_handoff.md  02_handoff.md  03_handoff.md  04_handoff.md  05_handoff.md  06_handoff.md  07_handoff.md
taquantgeo/.build/phases/: 00_orient.md  01_vessel_classifier.md  02_sea_route_distance.md  03_sar_dark_fleet.md  04_tightness_signal.md  05_signal_snapshot_tests.md  06_equity_prices.md  07_ic_analysis.md  08_backtester_core.md  09_walk_forward_cv.md  10_data_quality_monitors.md  11_scheduled_jobs.md  12_alerting.md  13_broker_interface_risk_gate.md  14_ibkr_adapter.md  15_reconciliation.md  16_audit_log.md  17_frontend_scaffold.md  18_globe_page.md  19_signal_dashboard.md  20_voyage_explorer.md  21_backtest_viewer.md  22_live_trading_page.md  23_alerts_feed_page.md  23b_design_system_page.md  23c_local_e2e_integration.md  24_production_deploy.md  25_backup_strategy.md  26_operator_runbook.md  27_legal_disclaimers.md  28_release_v0.md  90_candidate_triage.md  99_final_audit.md
taquantgeo/.build/templates/: candidate_phase_template.md  handoff_template.md  phase_template.md
taquantgeo/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
taquantgeo/.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md  signal-investigation.md
taquantgeo/.github/workflows/: ci.yml  dependabot-automerge.yml  labeler.yml
taquantgeo/data/processed/: dark_fleet_candidates.parquet  distance_cache.parquet  vessel_registry.parquet
taquantgeo/data/processed/voyages/route=td3c/year=2026/month=01/: voyages_c4_pipe_v3_202603.parquet
taquantgeo/docs/: RESEARCH_LOG.md  architecture.md  data_model.md  runbook.md  signals.md
taquantgeo/docs/adrs/: 0001-stack-decisions.md  0002-gfw-voyages-as-historical-source.md  0003-events-api-for-freshness.md  0004-vessel-classifier-heuristic.md  0005-sea-route-distance.md  0006-sar-dark-fleet-cross-ref.md  0007-tightness-signal-definition.md  0008-equity-price-source.md  0009-ic-fail-fast-gate.md  template.md
taquantgeo/infra/: Dockerfile  docker-compose.yml
taquantgeo/infra/alembic/: env.py
taquantgeo/infra/alembic/versions/: 0001_initial_vessels.py  0002_signals_table.py  0003_prices_table.py
taquantgeo/infra/caddy/: Caddyfile
taquantgeo/reports/: ic_analysis.md
taquantgeo/scripts/: bootstrap.sh
taquantgeo/tests/: conftest.py
taquantgeo/tests/integration/: test_db_vessels.py
taquantgeo/tests/unit/: test_smoke.py
taquantgeo/web/: README.md  package.json
